--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBWCPZ336L"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WY090HVVSF"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-EBWCPZ336L');
+      gtag('config', 'G-WY090HVVSF');
     </script>
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-NLXZQ3M"></script>
     <!-- Google Tag Manager -->
